syntax = "proto3";
package awesome;
option go_package = "pb";

service RegBox {
    rpc Register(AcccountRequest) returns (AcccountResponse);
    rpc Authenticate(AcccountRequest) returns (TokenResponse);
}

message AcccountRequest {
    string login = 1;
    string password = 2;
}

message AcccountResponse {
    string login = 1;
    string error = 2;
}

message TokenResponse {
    string accessToken = 1;
    string refreshToken = 2;
    string error = 3;
}
